--- a/Alyx.csproj
+++ b/Alyx.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Word.cs" />
     <Compile Include="Phonetic.cs" />
     <Compile Include="Sentence.cs" />
+    <Compile Include="Log.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
