Moved Log.cs and Tests.cs to a separate folder
Here they can be friends and hang out in their very exclusive
‘background’ club. Any other files that are used for background under
the hood work are welcome to join the club. :D

--- a/Alyx.csproj
+++ b/Alyx.csproj
@@ -38,8 +38,11 @@
     <Compile Include="Word.cs" />
     <Compile Include="Phonetic.cs" />
     <Compile Include="Sentence.cs" />
-    <Compile Include="Log.cs" />
-    <Compile Include="Tests.cs" />
+    <Compile Include="Background\Log.cs" />
+    <Compile Include="Background\Tests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <ItemGroup>
+    <Folder Include="Background\" />
+  </ItemGroup>
 </Project>
