--- a/Alyx.csproj
+++ b/Alyx.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Sentence.cs" />
     <Compile Include="Background\Log.cs" />
     <Compile Include="Background\Tests.cs" />
+    <Compile Include="Command.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
