Added basic conjugation
Now Alyx’s sentences stick to a single verb tense at a time!

--- a/Alyx.csproj
+++ b/Alyx.csproj
@@ -42,6 +42,8 @@
     <Compile Include="Background\Tests.cs" />
     <Compile Include="Command.cs" />
     <Compile Include="Simplifier.cs" />
+    <Compile Include="Markov.cs" />
+    <Compile Include="Conjugator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
